<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpaceCombat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="btnRanking">Ranking</string>
    <string name="btnSair">Sair</string>
    <string name="tituloDigite">Digite o seu apelido:</string>
    <string name="btnComecar">Começar</string>
    <string name="logo">logo</string>
    <string name="gameOver">Game Over</string>
    <string name="tituloPontuacao">Pontuação:</string>
    <string name="pontuacao">0</string>
    <string name="btnOk">Ok</string>
    <string name="tituloRanking">Ranking</string>
    <string name="refresh">refresh</string>
    <string name="txtNome">Apelido</string>
    <string name="btnInstrucoes">Instruções do Jogo</string>
    <string name="tituloInstrucoes">Instruções do Jogo</string>
    <string name="txtInstrucoes">Clique no ícone para atualizar</string>
    <string name="txtInst">Selecione o idioma</string>
    <string name="btnSave">Salvar</string>
    <string name="novoApelido">Apelido</string>
    <string name="novoTxtPont">Pontuação:</string>
    <string name="novoScore">0</string>
    <string name="novoSave">Salvar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnPort">Português</string>
    <string name="btnIng">English</string>

</resources>
