<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
    	
 
         
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste" />
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pontuacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnOk"
            android:layout_alignRight="@+id/gameOver"
            android:text="@string/pontuacao"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tituloPontuacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/btnOk"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/tituloPontuacao"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/gameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pontuacao"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            android:text="@string/gameOver"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloPontuacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:onClick="botaoOk"
            android:text="@string/btnOk" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pontuacao"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:text="@string/txtNome"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>

