<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
    	
 
         
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste" />
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/novoApelido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:text="@string/novoApelido"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/novoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/novoTxtPont"
            android:layout_alignBottom="@+id/novoTxtPont"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/novoTxtPont"
            android:text="@string/novoScore"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/novoTxtPont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/novoApelido"
            android:layout_below="@+id/novoApelido"
            android:layout_marginRight="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/novoTxtPont"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/novoSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp"
            android:onClick="voltar"
            android:text="@string/novoSave" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>