<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
    	
 
         
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste" />
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tituloInstrucoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tituloInstrucoes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

         <ImageView
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tituloInstrucoes"
             android:contentDescription="@string/refresh"
             android:src="@android:drawable/ic_menu_rotate" />

         <TextView
             android:id="@+id/txtInst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/refresh"
             android:layout_marginTop="18dp"
             android:text="@string/txtInst" />
                
    </RelativeLayout>
                

    
    <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>
        

