<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="br.edu.ufabc.game.MainActivity" >
    
    <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
        
        <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste"/>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnRanking"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:onClick="botaoIniciar"
            android:text="@string/btnIniciar" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="botaoRanking"
            android:text="@string/btnRanking" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRanking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/btnSair" />

    </RelativeLayout>
    
        <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>
