<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
    	
 
         
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste" />
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txtApelido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tituloDigite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtApelido"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/tituloDigite"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnComecar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtApelido"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="botaoComecar"
            android:text="@string/btnComecar" />

        <Button
            android:id="@+id/btnTeste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnComecar"
            android:layout_centerHorizontal="true"
            android:onClick="botaoTeste"
            android:text="TesteGameOver" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>
