<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/mainHeader"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="2" >
    	
 
         
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/logo"
             android:src="@drawable/logoteste" />
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="horizontal" >

        

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="voltarInicio"
            android:text="@string/btnVoltar" />

        

        <TextView
            android:id="@+id/tituloRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnVoltar"
            android:layout_alignBottom="@+id/btnVoltar"
            android:layout_centerHorizontal="true"
            android:text="@string/tituloRanking"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        


        
    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#ffffff"
        android:orientation="horizontal" >
        
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
            	android:id="@+id/txtRanking"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="ranking"
            	android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/mainFooter"
        android:orientation="horizontal"
        android:background="#000000"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"  
    	android:layout_weight="1" >
        
        
    </LinearLayout>

</LinearLayout>
        

